deploy/k8s/flux/infrastructure/configs/gatekeeper/policies/constraints/container_resource_ratios.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerRatios
metadata:
  name: container-must-meet-ratio
  namespace: kube-system
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "flux-system"]
  parameters:
    ratio: "1"
