deploy/k8s/flux/infrastructure/configs/gatekeeper/policies/constraints/disallowed_tags.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: container-image-must-not-have-latest-tag
  namespace: kube-system
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "flux-system"]
  parameters:
    tags: ["latest"]
