deploy/k8s/flux/infrastructure/configs/gatekeeper/policies/constraints/psp_capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: capabilities
  namespace: kube-system
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "flux-system"]
  parameters:
    requiredDropCapabilities: ["ALL"]
