deploy/k8s/flux/infrastructure/configs/gatekeeper/policies/constraints/psp_host_namespaces.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNamespace
metadata:
  name: psp-host-namespace
  namespace: kube-system
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "flux-system"]
