deploy/k8s/flux/infrastructure/configs/gatekeeper/policies/constraints/psp_volumes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: psp-volume-types
  namespace: kube-system
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "flux-system"]
  parameters:
    volumes:
      # Allow core volume types
      - configMap
      - emptyDir
      - projected
      - secret
      - downwardAPI
      # Assume that persistentVolumes set up by the cluster admin are safe to use
      - persistentVolumeClaim
